--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,20 @@ edition = "2021"
 xous = "0.9.9"
 log = "0.4.14"
 xous-api-log-server = {version = "0.1.2", package = "xous-api-log-server"}
+#libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
 
 libsignal-protocol = { git = "https://github.com/signalapp/libsignal-client", branch = "main" }
 zkgroup = { git = "https://github.com/signalapp/libsignal-client", branch = "main" }
+
+[dev-dependencies]
+criterion = "0.5"
+hex-literal = "0.4.1"
+proptest = "1.0"
+futures-util = "0.3.7"
+env_logger = "0.10.0"
+hex = "0.4"
+rand = "0.8.5"
+uuid = "1.1.2"
 
 [patch.crates-io]
 curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }
