wip: still working on cargo patching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-xous = "0.9.9"
+xous = "0.9.55"
 log = "0.4.14"
 xous-api-log-server = {version = "0.1.2", package = "xous-api-log-server"}
-libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
-
-#libsignal-protocol = { git = "https://github.com/signalapp/libsignal", branch = "main" }
-libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag="v0.32.0" }
-#zkgroup = { git = "https://github.com/signalapp/libsignal", branch = "main" }
-
+libsignal-protocol = {path="../libsignal/rust/protocol"}
 rand = "0.8.5"
-env_logger = "0.10.0"
 futures-util = "0.3.7"
 
 [dev-dependencies]
@@ -24,8 +18,8 @@ proptest = "1.0"
 hex = "0.4"
 uuid = "1.1.2"
 
-[patch.crates-io]
-curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }
+#[patch.crates-io]
+#curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }
 
 [patch.crates-io.getrandom]
 path = "../xous-core/imports/getrandom"
